<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Homepagetitle"
        android:id="@+id/Login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Usernametitle"
        android:id="@+id/uname"
        android:layout_below="@+id/Login"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/UsernameTextbox"
        android:ems="10"
        android:id="@+id/Username"
        android:layout_below="@+id/uname"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Passwordtitle"
        android:id="@+id/pswd"
        android:layout_below="@+id/Username"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password"
        android:layout_below="@+id/pswd"
        android:layout_alignParentStart="true"
        android:hint="@string/PasswordTextbox" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogInButton"
        android:id="@+id/Login_button"
        android:layout_below="@+id/Password"
        android:layout_toStartOf="@+id/Login" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegisterButton"
        android:id="@+id/Register_button"
        android:layout_alignTop="@+id/Login_button"
        android:layout_toEndOf="@+id/Login" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/LostPasswordButton"
        android:id="@+id/LostP_button"
        android:layout_below="@+id/Login_button"
        android:layout_alignParentStart="true" />

</RelativeLayout>
